# bytewax-s2

./: .gitignore  CHANGELOG.md  README.md  cliff.toml  pyproject.toml
.github/workflows/: release.yml
examples/: sink.py  source.py
src/bytewax_s2/: __init__.py  _io.py  _s2.py  _types.py
tests/: sink.py  source.py
